[package]
name = "moq-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
moq-transport = { path = "../moq-transport", version = "0.9" }
moq-native-ietf = { path = "../moq-native-ietf", version = "0.5" }
url = "2"

# Async stuff
tokio = { version = "1", features = ["full"] }

# CLI, logging, error handling
clap = { version = "4", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0.11"
anyhow = { version = "1", features = ["backtrace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
